<resources>
    <string name="app_name">WarnaPedia</string>
    <string name="title">Judul</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dasbor</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="title_settings">Pengaturan</string>
    <string name="title_chat">Obrolan</string>
    <string name="title_favorite">Favorit</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Hapus</string>
    <string name="example_color">#FFBB86FC</string>
    <string name="example_design">Contoh Desain</string>
    <string name="example_palette">Palet Satu</string>
    <string name="example_nav_button_right">Tombol Navigasi Desain Kanan</string>
    <string name="example_nav_button_left">Tombol Navigasi Desain Kiri</string>
    <string name="error_response_no_connection">Tidak ada koneksi yang tersedia, harap periksa koneksi Anda dan coba lagi</string>
    <string name="error_response_server_down">Maaf, layanan kami sedang tidak tersedia, silakan coba lagi dalam beberapa menit</string>
    <string name="enter_text">Masukkan Teks</string>
    <string name="favorite_empty">Anda dapat menambahkan palet warna dengan menekan lambang hati pada setiap kotak palet</string>
    <string name="dummy_name">John Doe</string>
    <string name="dummy_job">Pengembang Web Junior</string>
    <string name="dummy_age">Usia: 23 tahun</string>
    <string name="dummy_phone_number">Telepon: +62-2222-3333</string>
    <string name="dummy_email">Email: john@dummy.com</string>
    <string name="dummy_title">Judul 1</string>
    <string name="delete_chat_confirmation">Tindakan ini akan menghapus semua riwayat obrolan. Apakah Anda ingin melanjutkan?</string>
    <string name="selected">terpilih</string>
    <string name="personal_information">Informasi Pribadi</string>
    <string name="my_story">Kisah Saya</string>
    <string name="the">Sebuah</string>
    <string name="login">Masuk</string>
    <string name="favorite">favorit</string>
    <string name="view">lihat</string>
    <string name="opening_chat">Apa yang ingin Anda buat hari ini?</string>
    <string name="type_here">Ketik di sini...</string>
    <string name="send_button">Tombol Kirim</string>
    <string name="go_to_design">Menuju Desain</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ultricies mi vel scelerisque ullamcorper. Integer nec efficitur orci, vel commodo massa. Nullam eget congue ante. Nulla nunc nisl, dapibus a semper eu, rutrum ut purus. Morbi semper, massa eu mattis fringilla, orci eros imperdiet sem, in ultrices diam purus feugiat ex. Etiam eget rhoncus mi. Vivamus vitae turpis condimentum, commodo ligula vitae, rhoncus justo. Fusce eu felis ante.</string>
    <string name="medium_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ultricies mi vel scelerisque ullamcorper. Integer nec efficitur orci, vel commodo massa. Nullam eget congue ante. Nulla nunc nisl, dapibus a semper eu, rutrum ut purus.</string>
    <string name="short_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ultricies mi vel scelerisque ullamcorper.</string>
    <string-array name="default_first_chat">
        <item>Apa yang ingin Anda buat hari ini?\n\nTips: Anda bisa meminta palet warna menggunakan kode hexadecimal\nContoh #FFFFFF (pastikan menggunakan tanda pagar ya!)</item>
        <item>Apa yang ingin Anda buat hari ini?\n\nTips: Anda dapat mengaktifkan fitur bantuan buta warna lewat pengaturan</item>
        <item>Apa yang ingin Anda buat hari ini?\n\nTips: Selain menekan lambang mata, Anda dapat tekan tahan pada palet warna untuk melihat detail warna</item>
        <item>Apa yang ingin Anda buat hari ini?\n\nTips: Pada halaman detail warna, Anda dapat tekan tahan pada warna yang anda sukai untuk menyalin kode hexanya loh!</item>
        <item>Apa yang ingin Anda buat hari ini?\n\nTips: Jika anda mengalami kesulitan dalam mengoperasikan aplikasi ini, anda dapat menekan lambang tanda tanya (\'?\') pada halaman utama untuk mendapatkan petunjuk!</item>
    </string-array>
    <string name="color_palette_recomendation">Rekomendasi Palet Warna</string>
    <string name="color_palette_recomendation_desc">Anda dapat meminta palet warna dengan hanya mengetik pada kotak teks</string>
    <string name="save_color_palette_recomendation">Simpan Rekomendasi Palet Warna</string>
    <string name="save_color_palette_recomendation_desc">Anda dapat menyimpan palet warna pilihan Anda untuk digunakan di kemudian hari</string>
    <string name="access_saved_color_palette">Akses Palet Warna Tersimpan</string>
    <string name="access_saved_color_palette_desc">Buka menu favorit untuk mengakses palet warna pilihan Anda</string>
    <string name="access_detail_color_palette">Akses Detail Palet Warna</string>
    <string name="access_detail_color_palette_desc">Tekan tahan pada salah satu palet warna atau menekan lambang mata untuk mengakses detail palet warna</string>
    <string name="color_blind_feature">Fitur Buta Warna</string>
    <string name="color_blind_feature_desc">Jika Anda memiliki buta warna, Anda dapat memilih warna yang tidak dapat Anda lihat</string>
    <string name="palette_recommendation">Rekomendasi Palet</string>
    <string name="version">Versi</string>
    <string name="version_value">1.0</string>
    <string name="color_blind">Buta Warna</string>
    <string name="color_blind_value">Tidak Ada</string>
    <string name="edit_color_palette_name">Edit Nama Palet Warna</string>
    <string name="setting_color_blind_spinner">Pengaturan Pemilih Buta Warna</string>
    <string name="share_button">Tombol Bagikan</string>
    <string name="share_layout_image">Bagikan Gambar Tata Letak</string>
    <string name="share_design_text">Lihat palet warna ini dari Warna Pedia!\n%s\n%s\n%s\n%s</string>
    <string name="maximum_character">Karakter maksimum adalah %s</string>
    <string name="field_is_blank">Nama tidak boleh kosong</string>
    <string name="warna_pedia_is_typing">Warna Pedia mengetik...</string>
    <string name="copied_color">Warna %s</string>
    <string name="color_copied_to_clipboard">%s tersalin</string>
    <string name="error_color_palette_name_cannot_be_empty">Nama palet warna tidak boleh kosong</string>
    <string name="error_color_palette_must_saved_to_db">Simpan palet warna terlebih dahulu</string>
    <string name="online">Aktif</string>
    <string name="offline">Inaktif</string>
    <string name="layout_image">gambar.png</string>
    <string name="FAVORITE">FAVORIT</string>
    <string name="RECOMMENDATION">REKOMENDASI</string>
    <string name="PROCEED">LANJUTKAN</string>
    <string name="CANCEL">BATAL</string>
    <string name="YES">YA</string>
    <string name="NO">TIDAK</string>
    <string name="SKIP">LEWATI</string>
    <string name="GET_STARTED">MULAI</string>
    <string-array name="color_blind_list">
        <item>Tidak Buta Warna</item>
        <item>Deuteranomaly (lemah warna merah)</item>
        <item>Protanomaly (lemah warna hijau)</item>
        <item>Deuteranopia (buta warna hijau)</item>
        <item>Tritanomaly (lemah warna biru)</item>
    </string-array>
</resources>