<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.warnapedia.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_navigation_home_to_chatDetailFragment"
            app:destination="@id/chatDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dicoding.warnapedia.ui.favorite.FavoriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_dashboard_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recomendation"
        android:name="com.dicoding.warnapedia.ui.recomendation.RecomendationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_recomendation" >
        <action
            android:id="@+id/action_navigation_recomendation_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.dicoding.warnapedia.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="color_palette_name"
            app:argType="string"
            android:defaultValue="Color Palette" />
        <argument
            android:name="colors"
            app:argType="string[]" />
    </fragment>
    <fragment
        android:id="@+id/chatDetailFragment"
        android:name="com.dicoding.warnapedia.ui.chat.chatdetail.ChatDetailFragment"
        android:label="fragment_chat_detail"
        tools:layout="@layout/fragment_chat_detail" />
</navigation>