<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="10dp"
    card_view:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_background_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/teal_700">

        <View
            android:id="@+id/color_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintWidth_percent="0.25"
            />
        <View
            android:id="@+id/color_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/color_four"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintWidth_percent="0.25"
            />
        <View
            android:id="@+id/color_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/color_three"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintWidth_percent="0.25"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_selected_color_palette"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:alpha="0.7"
            android:background="@color/white"
            card_view:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/selected"
                android:textSize="10sp"
                android:textStyle="italic"
                android:alpha="0.7"
                android:textColor="@color/black">
            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_color_palette_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/example_palette"
        android:layout_marginLeft="10dp"
        android:textSize="14sp"
        android:layout_gravity="bottom"
        android:textColor="@color/black"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_favorite_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom|end"
        android:checkable="true"
        card_view:icon="@drawable/baseline_favorite_border_24"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        card_view:iconGravity="textStart"
        card_view:iconPadding="0dp"
        android:backgroundTint="@color/white"
        card_view:iconTint="@color/black"
        android:contentDescription="@string/favorite"
        style="?android:attr/borderlessButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_view_detail_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/view"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        card_view:icon="@drawable/baseline_remove_red_eye_24"
        card_view:iconGravity="textStart"
        card_view:iconPadding="0dp"
        card_view:iconTint="@color/black"/>
</androidx.cardview.widget.CardView>