<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_to_image"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recomendation.RecomendationFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways|snap" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/l_example_design_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/example_design_container_height"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <FrameLayout
            android:id="@+id/frameLayoutExampleDesign"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/example_design_nav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/layout_border_bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_design"
                android:textColor="@color/black"
                android:layout_marginLeft="17dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/b_share_design"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_button_nav"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/share_button"
                android:src="@drawable/baseline_share_24"
                android:stateListAnimator="@animator/fade_state_list_animator_alpha"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/b_right_example_layout"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/b_right_example_layout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_button_nav"
                android:layout_marginRight="10dp"
                android:src="@drawable/baseline_keyboard_arrow_left_24"
                android:contentDescription="@string/example_nav_button_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/b_left_example_layout"
                app:layout_constraintTop_toTopOf="parent"
                android:stateListAnimator="@animator/fade_state_list_animator_alpha"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/b_left_example_layout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector_button_nav"
                android:contentDescription="@string/example_nav_button_right"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                android:stateListAnimator="@animator/fade_state_list_animator_alpha"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_colors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="316dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_example_design_container"
        app:layout_constraintVertical_bias="0.277"
        tools:listitem="@layout/item_row_color" />
</androidx.constraintlayout.widget.ConstraintLayout>